<resources>
    <string name="app_name">My Application</string>
    <string name="san_jose_sharks">San Jose Sharks</string>
    <string name="title">Title</string>
    <string name="player">player</string>
    <string name="next_match">Next match</string>
    <string name="nr">#</string>
    <string name="position">position</string>
    <string name="away">Away</string>
    <string name="home">Home</string>
    <string name="away_record">Away record</string>
    <string name="home_record">Home record</string>
    <string name="hash">#</string>
    <string name="name">Name</string>
    <string name="pos">POS</string>
    <string name="p">p</string>
    <string name="matchdate">Match date</string>
    <string name="venue">Venue</string>
    <string name="number">Number</string>
    <string name="team">Team</string>
    <string name="previous_match">Previous match</string>
    <string name="away_result">Away result</string>
    <string name="home_result">Home result</string>
    <string name="nationality">Nationality</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="shootscatches">Shoots / Catches</string>
    <string name="primary_position">Primary position</string>
    <string name="no_next_matches_available">No next matches available</string>
    <string name="no_previous_matches_available">No previous matches available</string>
    <string name="games">GP</string>
    <string name="goals">G</string>
    <string name="assists">A</string>
    <string name="points">P</string>
    <string name="lbs">%1$d lbs</string>
    <string name="record">%1$d-%2$d-%3$d</string>
    <string name="match_venue">%1$s %2$s</string>
    <string name="points_per_month">Points per month</string>
</resources>