<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvPlayerNumber"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/nr"
        android:textColor="@color/teal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPlayerName"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/player"
        android:textColor="@color/teal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvPlayerPosition"
        app:layout_constraintStart_toEndOf="@+id/tvPlayerNumber"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPlayerPosition"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="@string/position"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/teal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>