<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/title"
            android:textSize="24sp"
            android:textColor="@color/teal"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRoster"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/tv_nextMatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/next_match"
            android:textAlignment="center"
            android:textColor="@color/teal"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvRoster" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/next_match"
            android:textAlignment="center"
            android:textColor="@color/teal"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvRoster" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nextMatch">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/nextMatchTeams"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/nextMatchRecords"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHeight_percent="0.33" >

                <TextView
                    android:id="@+id/tvAway"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:text="@string/away"
                    android:textAlignment="center"
                    android:textColor="@color/teal"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvHome"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_default="percent"
                    app:layout_constraintWidth_percent="0.5" />

                <TextView
                    android:id="@+id/tvHome"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:text="@string/home"
                    android:textAlignment="center"
                    android:textColor="@color/teal"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_default="percent"
                    app:layout_constraintWidth_percent="0.5" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/nextMatchRecords"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nextMatchTeams"
                app:layout_constraintHeight_percent="0.33" >

                <TextView
                    android:id="@+id/tvAwayRecord"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:text="@string/away_record"
                    android:textAlignment="center"
                    android:textColor="@color/teal"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvHomeRecord"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_default="percent"
                    app:layout_constraintWidth_percent="0.5" />

                <TextView
                    android:id="@+id/tvHomeRecord"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:text="@string/home_record"
                    android:textAlignment="center"
                    android:textColor="@color/teal"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_default="percent"
                    app:layout_constraintWidth_percent="0.5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/venueConstraint"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintHeight_percent="0.34"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nextMatchRecords">

                <TextView
                    android:id="@+id/nextMatchVenue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:text="@string/home_record"
                    android:textAlignment="center"
                    android:textColor="@color/teal"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
